# infospark

./: .gitignore  Cargo.toml  README.md
corpus/: doc_a.txt  doc_b.txt  doc_c.txt  doc_d.md  doc_e.html  doc_f.tex
src/: inverted_index.rs  main.rs  tokenizer.rs
