[package]
name = "infospark"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-stemmers = "1.2.0"
stop-words = "0.8.1"
lazy_static = "1.4.0"
colored = "3.0"
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
rayon = "1.10"
lru = "0.14.0"
strsim = "0.11.1"
rustyline = "16.0.0"
